<resources>
    <string name="title_activity_player_selection">Game Selection</string>
    <string name="title_activity_player_list">Players</string>
    <string name="top_scores">Top Scores</string>

    <string name="title_player_mode">Game Mode</string>
    <string name="player">Offline</string>
    <string name="aimode">AI</string>
    <string name="player_multi">Online</string>
    <string name="board_size">Board Size</string>
    <string name="default_rounds">Round 0/1</string>
    <string name="next_round">Next Round</string>
    <string name="title_activity_player_select">PlayerSelectActivity</string>

    <string name="add_player">Add Player</string>
    <string name="player_name">Name</string>

    <!-- game layout -->

    <!-- selection layout -->
    <string name="app_name">Connect Four</string>
    <string name="player1_string">Player 1</string>
    <string name="player2_string">Player 2</string>
    <string name="rewind_button">Rewind</string>
    <string name="player1_color_image">Player One Color</string>
    <string name="player2_color_image">Player Two Color</string>
    <string name="play">Play!</string>
    <string name="rounds">Rounds</string>

    <!-- online layout -->
    <string name="host_join">Play</string>
    <!-- top scores -->

    <!-- Rules layout -->
    <string name="rules">
        <li> <b><center>Game Rules: </center></b></li> \n\n
        <li> The Connect 4 Board Game Rules are easy to understand. In fact, it is in the name. To win Connect Four, all you have to do is connect four of your colored checker pieces in a row, much the same as tic tac toe. This can be done horizontally, vertically or diagonally. Each player will drop in one checker piece at a time. This will give you a chance to either build your row, or stop your opponent from getting four in a row.The game is over either when you or your friend reaches four in a row, or when all the slots are filled, its a stalemate.</li>\n\n

        <li>The rules of the game are easy to learn, but difficult to master. That is the beauty of Connect Four. Now that you know the Connect 4 board game rules, now is the time to challenge everyone you know. No matter their age or skill level, they can play this game with you. Now that you understand the rules, share Connect Four with everyone around you. You’ll be glad you did. </li>
    </string>

    <string name="feedback">
        <li> <b><center>Feedback: </center></b></li> \n\n
        <li> By clicking this button, you will be able to send an email with your feedback.</li>
    </string>
    <!-- Feedback layout -->
    <string name="button_feedback">Send feedback</string>
    <string name="title_send_feedback">Send feedback</string>
    <!-- can create a group email and add it here-->
    <string name="mail_feedback_email">namratha17.bm@gmail.com</string>
    <string name="mail_feedback_subject">Feedback on Connect 4 </string>
    <string name="mail_feedback_message">Hi,
    \n\nYour Connect 4 app rocks! I would like to give you some feedback:</string>
    <string name="title_activity_onlinedemo">OnlinedemoActivity</string>


</resources>
