<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iamrobots.connectfour.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/player1_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/player1_string"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:contentDescription="@string/player1_color_image"
            app:srcCompat="@drawable/yellow_circle" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:contentDescription="@string/player2_color_image"
            app:srcCompat="@drawable/red_circle" />

        <TextView
            android:id="@+id/player2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/player2_string"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.iamrobots.connectfour.views.BoardView
        android:id="@+id/boardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/rewindButton"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:columns="7"
        app:rows="6"
        />

    <ImageButton
        android:id="@+id/rewindButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/rewind_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</android.support.constraint.ConstraintLayout>
